--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://bhaleraomahesh.github.io/digital-profile/",
   "name": "digital-profile",
   "private": true,
   "version": "0.0.0",
