--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -34,4 +34,4 @@ jobs:
       with:
         ACCESS_TOKEN: ${{ secrets.DEPLOYMENT_WORKFLOW_PAT }}
         BRANCH: gh-pages
-        FOLDER: build
+        FOLDER: dist
