--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,9 +29,9 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
-    - name: Deploy to GitHub Pages
-      uses: JamesIves/github-pages-deploy-action@4.1.4
-      with:
-        ACCESS_TOKEN: ${{ secrets.DEPLOYMENT_WORKFLOW_PAT }}
-        BRANCH: gh-pages
-        FOLDER: dist
+    - name: Deploy with gh-pages
+        run: |
+          git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
+          npm run deploy -- -u "github-actions-bot <support+actions@github.com>"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
