--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://bhaleraomahesh.github.io/digital-profile/",
+  "homepage": "https://bhaleraomahesh.github.io/digital-profile",
   "name": "digital-profile",
   "private": true,
   "version": "0.0.0",
@@ -11,7 +11,8 @@
     "preview": "vite preview",
     "test": "vitest",
     "test:watch": "vitest --watch",
-    "coverage": "vitest run --coverage"
+    "coverage": "vitest run --coverage",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -28,6 +29,7 @@
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "gh-pages": "^6.1.1",
     "jsdom": "^24.0.0",
     "typescript": "^5.2.2",
     "vite": "^5.1.0",
